--- a/package.json
+++ b/package.json
@@ -2,13 +2,23 @@
   "name": "demo02",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "server": "node server.js",
+    "start": "NODE_ENV=production node server.js",
     "build": "next build",
-    "start": "next start",
+    "dev": "next dev",
+    "prod": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^4.17.3",
+    "antd-mobile": "^5.0.0-rc.3",
+    "axios": "^0.24.0",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.1",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
     "next": "12.0.7",
+    "next-with-less": "^2.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
@@ -17,6 +27,8 @@
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "next-images": "^1.8.4",
+    "next-transpile-modules": "^9.0.0",
     "typescript": "4.5.2"
   }
 }
