--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "http-proxy-middleware": "^2.0.1",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
-    "next": "12.0.7",
+    "next": "^12.0.8-canary.5",
     "next-with-less": "^2.0.4",
+    "next@canary": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
